Fixed alignements and updated texts

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,10 @@ button:hover span {
 		'opsz' 24
 }
 
+.formforlink {
+	margin-top: -20px;
+}
+
 /* Carousel */
 .c-item {
 	height: 500px;
